--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.col-md-3{
+	margin-top: 10px;
+}
+
 .fr_navbar {
 	background-color: #7bd9ff;
 }
@@ -6,29 +10,76 @@
 	padding-top: 50px;
 }
 
-.fr_item 
-{
-}
-
 .fr_fruit{
 	background-color: #acff89;
 }
 
+.fr_item 
+{
+	background-color: #85ffe2;
+	text-align: center;
+	-webkit-perspective: 1700px;
+	-moz-perspective: 1700px;
+	perspective: 1700px;
+	-webkit-perspective-origin: 0 50%;
+	-moz-perspective-origin: 0 50%;
+	perspective-origin: 0 50%;
+}
+
+figure {
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+}
+
+figure > div {
+	overflow: hidden;
+}
+
+figure img {
+	-webkit-transition: -webkit-transform 0.4s;
+	-moz-transition: -moz-transform 0.4s;
+	transition: transform 0.4s;
+}
+
+figure:hover img,
+figure.cs-hover img {
+	-webkit-transform: translateX(95%);
+	-moz-transform: translateX(95%);
+	-ms-transform: translateX(95%);
+	transform: translateX(95%);
+}
+
 figcaption {
-	position: absolute;
-	top:0;
-	left:0;
-	padding: 10px;
-	background-color: #feb2ff;
-
+position: absolute;
+	top: 0;
+	left: 0;
+	padding: 20px;
 	height: 100%;
-	width: 100%;
+	width: 70%;
 	opacity: 0;
-
+	background-color: #ffc7f9;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s, opacity 0.3s;
+	-webkit-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
+	transform-origin: 0 0;
+	-webkit-transform: rotateY(-90deg);
+	-moz-transform: rotateY(-90deg);
+	transform: rotateY(-90deg);
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
+	-moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
+	transition: transform 0.4s, opacity 0.1s 0.3s;
+}
+
+figure:hover figcaption,
+figure.cs-hover figcaption {
+	opacity: 1;
+	-webkit-transform: rotateY(0deg);
+	-moz-transform: rotateY(0deg);
+	transform: rotateY(0deg);
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
+	transition: transform 0.4s, opacity 0.1s;
 }
