--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,28 @@ h3 {
 	text-transform: uppercase;
 }
 
+.popover-title{
+	text-align: center;
+	color: #000000;
+}
+
+.popover-content{
+	text-align: center;
+	font-size: 14px;
+}
+
+.popover-content input{
+	margin-top: 5px;
+	height:22px;
+}
+
+#container .mix {
+	display: none;
+}
+
 .white {
 	color: #fff;
-	font-size: 20px;
+	font-size: 25px;
 }
 
 .nopadding {
@@ -33,7 +52,7 @@ h3 {
 	height: 180px;
 	overflow: hidden;
 	z-index: 10;
-	box-shadow:-10px -10px 50px; black;	
+	box-shadow:0px -10px 50px; black;	
 	-webkit-transition: -webkit-transform 0.2s;
 	-moz-transition: -moz-transform 0.2s;
 	transition: transform 0.2s;
@@ -62,3 +81,22 @@ figcaption {
 
 figcaption:hover{
 }
+
+.fr_selector{
+	color:white;
+	width: auto;
+	float:left;
+	display: inline-block;
+	margin:10px;
+}
+
+.fr_selector:hover{
+	cursor: pointer;
+}
+.active {
+	text-decoration: underline;;
+}
+
+
+
+
