--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,14 @@ h3 {
 
 .fr_imgholder img { z-index: 10;}
 
+.category-1 {
+	border-bottom:5px solid #66ff66;
+}
+
+.category-2 {
+	border-bottom:5px solid #ff8000;
+}
+
 figure:hover .fr_imgholder,
 figure.cs-hover .fr_imgholder {
 	-webkit-transform: translateY(-90px);
@@ -96,6 +104,30 @@ figcaption:hover{
 	text-decoration: underline;;
 }
 
+#fr_details {
+	display: none;
+	z-index: 999999999;
+	position: fixed;
+	top: 0;
+	left:0;
+	bottom: 0;
+	overflow-y:scroll;
+	width: 105%;
+	min-height: 100%;
+	background-color: black;
+	padding: 50px;
+	text-align: center;
+	color: #cccccc;
+}
 
+.fr_detail_title{
+}
+.fr_detail_title:hover{
+	cursor: pointer;
+}
+
+.noscroll{
+    overflow:hidden;
+}
 
 
